book style image distortion correct

--- a/app/assets/stylesheets/components/_books.scss
+++ b/app/assets/stylesheets/components/_books.scss
@@ -3,6 +3,11 @@
   background: $mid-blue;
   box-shadow: 0 0 2px rgba(0,0,0,0.2);
   padding: 1rem;
+
+  img{
+    height: 180px;
+    width: 240px;
+  }
 }
 
 .book-information{
